possible to change between dark mode and light mode on all apps; fixed app colors for consistency

--- a/project_1/Terminal/app/src/main/res/layout/activity_main.xml
+++ b/project_1/Terminal/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="org.feup.apm.nfcselectterminal.MainActivity">
+    android:orientation="vertical">
 
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="?attr/colorPrimary"
+      android:background="@color/blue"
       android:theme="?attr/actionBarTheme"
-      app:titleTextColor="@color/design_default_color_background" />
+      app:titleTextColor="@color/foreground" />
 
   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/container"
@@ -37,6 +35,8 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
+      android:backgroundTint="@color/blue"
+      android:textColor="@color/foreground"
       android:text="@string/bt_clear" />
 
 </LinearLayout>
