--- a/project_1/Terminal/app/src/main/res/layout/fragment_neutral.xml
+++ b/project_1/Terminal/app/src/main/res/layout/fragment_neutral.xml
@@ -15,6 +15,7 @@
         android:text="@string/tv_neutral"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
 
 </FrameLayout>
