--- a/project_1/Terminal/app/src/main/res/menu/menu.xml
+++ b/project_1/Terminal/app/src/main/res/menu/menu.xml
@@ -3,6 +3,12 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
+      android:id="@+id/item_switch"
+      android:title="@string/menu_mode"
+      app:actionLayout="@layout/switch_item"
+      app:showAsAction="always" />
+
+  <item
     android:id="@+id/mn_qr"
     android:icon="@drawable/ic_camera"
     android:title="@string/mn_qr"
