--- a/project_1/Terminal/app/src/main/res/values/colors.xml
+++ b/project_1/Terminal/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#3E89FD</color>
+    <color name="foreground">#FFFFFFFF</color>
+    <color name="dark_gray">#444444</color>
+    <color name="light_gray">#CCCCCC</color>
 </resources>
