--- a/project_1/client/app/src/main/res/layout/fragment_login.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_login.xml
@@ -70,7 +70,8 @@
                 android:layout_marginHorizontal="5sp"
                 android:layout_marginVertical="5sp"
                 android:width="300dp"
-                android:text="@string/login_button" />
+                android:text="@string/login_button"
+                android:textColor="@color/foreground"/>
 
         </LinearLayout>
 
