--- a/project_1/generator/app/src/main/res/values-night/colors.xml
+++ b/project_1/generator/app/src/main/res/values-night/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#b9d4f0</color>
     <color name="foreground">#FF000000</color>
+    <color name="dark_gray">#444444</color>
+    <color name="light_gray">#CCCCCC</color>
 </resources>
