--- a/project_1/Terminal/app/src/main/res/layout/fragment_error.xml
+++ b/project_1/Terminal/app/src/main/res/layout/fragment_error.xml
@@ -14,6 +14,7 @@
         android:text="@string/tv_error"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="@color/black"/>
 
 </FrameLayout>
