--- a/project_1/client/app/src/main/res/layout/dialog_fragment_checkout.xml
+++ b/project_1/client/app/src/main/res/layout/dialog_fragment_checkout.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
@@ -59,8 +57,9 @@
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:backgroundTint="#4CAF50"
-            android:text="@string/checkout_confirm" />
+            android:backgroundTint="@color/blue"
+            android:text="@string/checkout_confirm"
+            android:textColor="@color/foreground"/>
 
     </LinearLayout>
 
