--- a/project_1/client/app/src/main/res/layout/fragment_profile.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,31 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/theme"
+                android:textSize="16sp" />
+
+            <Switch
+                android:id="@+id/itemSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:minHeight="48dp"
+                android:thumb="@drawable/baseline_dark_mode_24"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/titleUser"
