--- a/project_1/client/app/src/main/res/values/colors.xml
+++ b/project_1/client/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#3E89FD</color>
     <color name="foreground">#FFFFFFFF</color>
+    <color name="dark_gray">#444444</color>
+    <color name="light_gray">#CCCCCC</color>
 </resources>
