--- a/project_1/generator/app/src/main/res/layout/activity_main.xml
+++ b/project_1/generator/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/blue"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,16 +18,14 @@
         app:menu="@menu/menu"
         app:title="Grocery App" />
 
-    <EditText
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/searchField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:autofillHints="@string/search"
-        android:background="@android:drawable/edit_text"
         android:hint="@string/search"
         android:inputType="text"
-        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
