--- a/project_1/client/app/src/main/res/layout/dialog_fragment_change_pass.xml
+++ b/project_1/client/app/src/main/res/layout/dialog_fragment_change_pass.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -84,4 +84,4 @@
             android:text="@string/changeConfirm" />
 
     </LinearLayout>
-</FrameLayout>
+</androidx.core.widget.NestedScrollView>
