--- a/project_1/client/app/src/main/res/layout/fragment_login.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".fragments.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -71,10 +72,10 @@
                 android:layout_marginVertical="5sp"
                 android:width="300dp"
                 android:text="@string/login_button"
-                android:textColor="@color/foreground"/>
+                android:textColor="@color/foreground" />
 
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+</androidx.core.widget.NestedScrollView>
