--- a/project_1/client/app/src/main/res/layout/fragment_transactions.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_transactions.xml
@@ -13,8 +13,11 @@
         <ListView
             android:id="@+id/lv_transaction"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_bt2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/empty2"
@@ -23,16 +26,19 @@
             android:gravity="center"
             android:text="@string/lv_empty_message"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_bt2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView2"
+        <LinearLayout
+            android:id="@+id/ll_bottom_bt2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <Button
                 android:id="@+id/bottom_button_update"
@@ -42,7 +48,7 @@
                 android:layout_margin="0dp"
                 android:padding="0dp"
                 android:text="@string/update" />
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
