--- a/project_1/client/app/src/main/res/layout/fragment_vouchers.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_vouchers.xml
@@ -79,9 +79,11 @@
         <ListView
             android:id="@+id/lv_voucher"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_bt"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/empty2"
@@ -89,16 +91,19 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/lv_empty_message"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
+            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_bt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView2"
+        <LinearLayout
+            android:id="@+id/ll_bottom_bt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <Button
                 android:id="@+id/bottom_button_update"
@@ -108,7 +113,7 @@
                 android:layout_margin="0dp"
                 android:padding="0dp"
                 android:text="@string/update" />
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
